--- a/freestyle-api/src/main/resources/application-prod.yml
+++ b/freestyle-api/src/main/resources/application-prod.yml
@@ -7,7 +7,7 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-  # 邮件配置
+  # 邮件配置, 需要服务器开放25端口
   mail:
     host: smtp.163.com
     username: iszhangsc@163.com
@@ -25,82 +25,77 @@ spring:
     time-zone: GMT+8
   aop:
     proxy-target-class: true
-  #配置freemarker
-  freemarker:
-    # 设置模板后缀名
-    suffix: .html
-    # 设置文档类型
-    content-type: text/html
-    # 设置页面编码格式
-    charset: UTF-8
-    # 设置页面缓存
-    cache: false
-    prefer-file-system-access: false
-    # 设置ftl文件路径
-    template-loader-path:
-      - classpath:/templates
   # 设置静态文件路径，js,css等
   mvc:
     static-path-pattern: /**
   resources:
     # 覆盖默认静态资源配置,添加 file:{freestyle.path.upload}
     static-locations: classpath:/META-INF/resources/,classpath:/static,classpath:/resources/,file:{freestyle.path.upload}
-  autoconfigure:
-    exclude: com.alibaba.druid.spring.boot.autoconfigure.DruidDataSourceAutoConfigure
   datasource:
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/freestyle?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=GMT%2B8&allowMultiQueries=true
+    type: com.alibaba.druid.pool.DruidDataSource
     druid:
+      # 初始话大小，最小，最大
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+      # 配置获取连接等待超时的时间 单位毫秒
+      max-wait: 60000
+      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+      time-between-eviction-runs-millis: 60000
+      # 配置一个连接在池中最小生存的时间，单位是毫秒
+      min-evictable-idle-time-millis: 300000
+      # 用来检测连接是否有效的sql，要求是一个查询语句
+      validation-query: select 'x'
+      # 建议配置为true，不影响性能，并且保证安全性。申请连接的时候检测，如果空闲时间大于timeBetweenEvictionRunsMillis，执行validationQuery检测连接是否有效。
+      test-while-idle: true
+      # 申请连接时执行validationQuery检测连接是否有效，做了这个配置会降低性能。
+      test-on-borrow: false
+      # 归还连接时执行validationQuery检测连接是否有效，做了这个配置会降低性能。
+      test-on-return: false
+      # 打开PSCache，并且指定每个连接上PSCache的大小
+      pool-prepared-statements: true
+      max-pool-prepared-statement-per-connection-size: 20
+      # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙, 'logback'为系统日志框架
+      filters: stat,wall,slf4j
+      # StatViewServlet配置
       stat-view-servlet:
         enabled: true
-        loginUsername: admin
-        loginPassword: 123456
+        loginUsername: freestyle
+        loginPassword: freestyle
         allow:
+      ## 监控配置
       web-stat-filter:
         enabled: true
-    dynamic:
-      druid: # 全局druid参数，绝大部分值和默认保持一致。(现已支持的参数如下,不清楚含义不要乱设置)
-        # 连接池的配置信息
-        # 初始化大小，最小，最大
-        initial-size: 5
-        min-idle: 5
-        maxActive: 20
-        # 配置获取连接等待超时的时间
-        maxWait: 60000
-        # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-        timeBetweenEvictionRunsMillis: 60000
-        # 配置一个连接在池中最小生存的时间，单位是毫秒
-        minEvictableIdleTimeMillis: 300000
-        validationQuery: SELECT 1 FROM DUAL
-        testWhileIdle: true
-        testOnBorrow: false
-        testOnReturn: false
-        # 打开PSCache，并且指定每个连接上PSCache的大小
-        poolPreparedStatements: true
-        maxPoolPreparedStatementPerConnectionSize: 20
-        # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-        filters: stat,wall,slf4j
-        # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
-        connectionProperties: druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
-      datasource:
-        master:
-          url: jdbc:mysql://127.0.0.1:3306/freestyle?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=GMT%2B8
-          username: root
-          password: 123456
-          driver-class-name: com.mysql.cj.jdbc.Driver
+      ## 配置StatFilter 慢SQL记录
+      filter:
+        stat:
+          db-type: mysql
+          log-slow-sql: true
+          slow-sql-millis: 1000
   #redis 配置
   redis:
     database: 0
     host: 127.0.0.1
     lettuce:
       pool:
-        max-active: 8   #最大连接数据库连接数,设 0 为没有限制
-        max-idle: 8     #最大等待连接中的数量,设 0 为没有限制
-        max-wait: -1ms  #最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
-        min-idle: 0     #最小等待连接中的数量,设 0 为没有限制
+        #最大连接数据库连接数,设 0 为没有限制
+        max-active: 8
+        #最大等待连接中的数量,设 0 为没有限制
+        max-idle: 8
+        #最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
+        max-wait: -1ms
+        #最小等待连接中的数量,设 0 为没有限制
+        min-idle: 0
       shutdown-timeout: 100ms
     password: 123456
     port: 6379
 #mybatis plus 设置
 mybatis-plus:
+  type-aliases-package: com.freestyle.module.*.domain
   mapper-locations: classpath:mapper/**/*Mapper.xml
   global-config:
     # 关闭MP3.0自带的banner
@@ -118,10 +113,3 @@ mybatis-plus:
 freestyle:
   path:
     upload: /home/iszhangsc/freestyle/
-
-#---------------------------------日志 打印级别------------------------------#
-logging:
-  level:
-    root: info
-    com:
-      freestyle: info
