--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <druid.version>1.1.17</druid.version>
         <jwt.version>3.8.2</jwt.version>
         <commons.version>2.6</commons.version>
-        <shiro.version>1.4.0</shiro.version>
+        <shiro.version>1.4.1</shiro.version>
         <hutool.verion>4.6.3</hutool.verion>
         <qiniu.version>7.2.23</qiniu.version>
         <fastjson.version>1.2.58</fastjson.version>
@@ -83,6 +83,11 @@
                 <version>${spring.boot.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
             <!-- Redis -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -102,25 +107,11 @@
                 <version>${spring.boot.version}</version>
             </dependency>
 
-            <!-- freemarker -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-freemarker</artifactId>
-                <version>${spring.boot.version}</version>
-            </dependency>
-
             <!-- druid -->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.version}</version>
-            </dependency>
-
-            <!-- 动态数据源 -->
-            <dependency>
-                <groupId>com.baomidou</groupId>
-                <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
-                <version>${dynamic-datasource.version}</version>
             </dependency>
 
             <!-- mybatis-plus -->
@@ -132,14 +123,9 @@
             <!--shiro-->
             <dependency>
                 <groupId>org.apache.shiro</groupId>
-                <artifactId>shiro-spring-boot-starter</artifactId>
+                <artifactId>shiro-spring</artifactId>
                 <version>${shiro.version}</version>
             </dependency>
-            <!-- <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-devtools</artifactId>
-                <optional>true</optional>
-            </dependency> -->
 
             <!--以下全是工具包-->
             <!-- commons -->
