--- a/freestyle-api/pom.xml
+++ b/freestyle-api/pom.xml
@@ -77,4 +77,15 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <finalName>freestyle-api</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
